Mais informação para o Application Controller

--- a/index.html
+++ b/index.html
@@ -299,6 +299,21 @@ Um ponto centralizado para tratar a navegação da tela e o fluxo da aplicação
 
 <!-- ========================================= --> </script></section><section data-markdown><script type="text/template">
 
+### Como funciona?
+ - Os controladores de entrada interagem com o controle de aplicação.
+ - Um controlador de aplicação tem duas responsabilidades:7
+  - Decidir qual lógica do domínio rodar.
+  - Decidir qual view deve ser usada.
+
+<!-- ========================================= --> </script></section><section data-markdown><script type="text/template">
+
+### Quando usar?
+ - Quando você tiver fluxos complexos na aplicação:
+  - Muitas regras definidas a respeito da ordem na qual as páginas devem ser visitadas
+  - E quando diferentes views devem ser usadas dependendo do estado de outros objetos.
+
+<!-- ========================================= --> </script></section><section data-markdown><script type="text/template">
+
 # Obrigado! :)
 
 </script></section>
