Adiciona um detalhe no Template View

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ Renderiza informação para HTML ao embutir marcadores em uma página HTML.
  - Quando a página é processada, os marcadores são substituídos por conteúdo dinâmico.
  - Uma das formas mais populares de Template View são páginas de servidor como ASP, JSP, e PHP.
  - Tentar evitar scriptlets nas páginas (ex. vários IFs) em favor de usar um Template View mais puro.
+ - É possível usar um objeto auxiliar para evitar scriptlets.
 
 <!-- ========================================= --> </script></section><section data-markdown><script type="text/template">
 
